--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <div class="container">
     <div class="row">
     <div class="col-md-3">
-     <div class="btn">
+     <div class="btn-2">
       <ul>
         
      <li>  <a href="">TAB 1</a></li> 
@@ -404,7 +404,7 @@
   </p>
   <div class="flex-x">
     <div class="imga"><img src="img/client.jpg"></div>
-    <div class="name">Tom Hanks <br>manager</div>
+    <div class="name"> <h3>Tom Hanks </h3><p>manager </p></div>
   </div>
 
 </div>
@@ -412,30 +412,76 @@
 
 
 
-<div class="col-md-4"></div>
+<div class="col-md-4">
+   <p class="tag">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+  </p>
+<div class="row">
+  <div class="col-md-3">
+  <div class="imgs">  <img src="img/client.jpg"></div>
+  </div>
 
+<div class="col-md-9">
+  <div class="no-name">
+    <h3>Tom hanks </h3>
+    <p>photographer</p>
+  </div>
+</div>
 
-
-
-
-<div class="col-md-4"></div>
-
-
-
-
-
-
-
-
-
-
+</div>
 </div>
 
 
-  </div>
+
+
+
+<div class="col-md-4">
   
+   <p class="tag">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+  </p>
+<div class="row">
+  <div class="col-md-3">
+  <div class="imgs">  <img src="img/client.jpg"></div>
+  </div>
+
+<div class="col-md-9">
+  <div class="no-name">
+    <h3>Tom hanks </h3>
+    <p>Freelancer</p>
+  </div>
 </div>
 
+</div>
+</div>
+</div>
+</div>
+</div>
+</div> </div>
+
+<!-- BANNER 2 from here -->
+<div class="banner-two">
+  <div class="container">
+    <div class="b-head">
+      <h2>STYLISH AXURE DESIGN</h2>
+      <div class="line-8"></div>
+     <div class="banner-pre"> <p>Lorem odo viverra maecenas accumsan lacus vel facilisis.</p></div>
+   <button type="button" class="btn btn-outline-success">Download</button>
+    </div>
+ </div>
+</div>
+
+
+
+
+
+
+
+<!-- banner two end here -->
 
             
 
