--- a/index.html
+++ b/index.html
@@ -475,17 +475,77 @@
  </div>
 </div>
 
-
-
-
-
-
-
 <!-- banner two end here -->
-
-            
-
 <!-- CUSTOMER FEEDBACK PART END -->
+
+
+<!-- Contact from here  -->
+<div class="contact-part">
+  <div class="container">
+
+<div class="c-head">
+  <h4>Contact Us</h4>
+  <div class="line-9"></div>
+  <p>Lorem odo viverra meacense accumsan lacus vel facilitirs</p>
+</div>
+
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="contact">
+        <input type="text" name="" placeholder="Name">
+        <input type="Email" name="" placeholder="Email">
+        <input type="text" name="" placeholder="Subject">
+      </div>
+      </div>
+      <div class="col-md-6">
+        <div class="box">
+          <textarea class="input" id="text" placeholder="text-here"> message
+          </textarea>
+        </div>
+      </div>
+    </div>
+    </div>
+<div class="send">
+<button type="button" class="btn btn-primary btn-lg">Send Massage</button>
+
+
+
+</div>
+
+  </div>
+</div>
+
+<!-- contact end here -->
+
+
+<!-- END PART FROM HERE -->
+
+
+<div class="ending">
+  <div class="container">
+    <div class="iconbro">
+      <ul>
+        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+         <li><a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a></li> <li><a href=""><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li> 
+         <li><a href=""><i class="fa fa-address-book-o" aria-hidden="true"></i></a></li> 
+
+         <li><a href=""><i class="fa fa-quora" aria-hidden="true"></i></a></li>
+
+
+          <li><a href=""><i class="fa fa-wifi" aria-hidden="true"></i>
+</a></li>
+      </ul>
+    </div>
+    <div class="copyright">
+      <p>2015 Axure themes</p>
+    </div>
+  </div>
+</div>
+
+<!-- END PART END -->
+
 
 
 
